crates/config/tests/snapshots/key_value_quoted_key_empty.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-quoted-key-empty

## Input

```mical
"" value
'' value

```

## JSON

```json
{
  "": [
    "value",
    "value"
  ]
}
```

vim:ft=markdown
