crates/config/tests/snapshots/key_value_quoted_key_unexpected.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-quoted-key-unexpected

## Input

```mical
"quoted"ppp aaa
'quoted'xxx bbb

```

## Parser Error

```
8..8: unexpected token after quoted key

24..24: unexpected token after quoted key

```

## JSON

```json
{
  "quoted": [
    "aaa",
    "bbb"
  ]
}
```

vim:ft=markdown
