crates/config/tests/snapshots/key_value_quoted_key_with_space.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-quoted-key-with-space

## Input

```mical
"key with spaces" value
'key with spaces' value

```

## JSON

```json
{
  "key with spaces": [
    "value",
    "value"
  ]
}
```

vim:ft=markdown
