crates/config/tests/snapshots/key_value_quoted_string.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-quoted-string

## Input

```mical
a "hello"
b 'world'
c ""
d ''

```

## JSON

```json
{
  "a": "hello",
  "b": "world",
  "c": "",
  "d": ""
}
```

vim:ft=markdown
