crates/config/tests/snapshots/key_value_quoted_value_at_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-quoted-value-at-eof

## Input

```mical
a "foo"
```

## JSON

```json
{
  "a": "foo"
}
```

vim:ft=markdown
