crates/config/tests/snapshots/key_value_quoted_value_trailing.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-quoted-value-trailing

## Input

```mical
a "trailing" extra
b 'trailing' extra

```

## Parser Error

```
12..12: unexpected token after quoted value

31..31: unexpected token after quoted value

```

## JSON

```json
{
  "a": "trailing",
  "b": "trailing"
}
```

vim:ft=markdown
