crates/config/tests/snapshots/key_value_sign_integer_at_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-sign-integer-at-eof

## Input

```mical
c +5
```

## JSON

```json
{
  "c": 5
}
```

vim:ft=markdown
