crates/config/tests/snapshots/key_value_space_no_value.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-space-no-value

## Input

```mical
key   

```

## Parser Error

```
6..6: missing value for the key

```

## JSON

```json
{}
```

vim:ft=markdown
