crates/config/tests/snapshots/key_value_wide_separator.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-wide-separator

## Input

```mical
a  value
b   42
c    true

```

## JSON

```json
{
  "a": "value",
  "b": 42,
  "c": true
}
```

vim:ft=markdown
