crates/config/tests/snapshots/key_value_word_key.snap
---
source: crates/config/tests/snapshots.rs
---
# key-value-word-key

## Input

```mical
hello world
42  value
-57 value
+13 value
true  value
false value

```

## JSON

```json
{
  "hello": "world",
  "42": "value",
  "-57": "value",
  "+13": "value",
  "true": "value",
  "false": "value"
}
```

vim:ft=markdown
